Fix filter button not showing for other devices, initial implementation of footer

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -32,7 +32,7 @@
   .flexWrapper {
     display: flex;
     padding-top: calc(17px + (20 - 17) * ((100vw - 375px) / (768 - 375)));
-    padding-bottom: 0;
+    padding-bottom: calc(17px + (20 - 17) * ((100vw - 375px) / (768 - 375)));
     flex-direction: row;
   }
 
