--- a/src/components/Filter.module.css
+++ b/src/components/Filter.module.css
@@ -131,10 +131,6 @@
 /* TABLET */
 
 @media (min-width: 48rem) and (max-width: 64rem) {
-  .mobile_btn {
-    display: none;
-  }
-
   .nameContainer {
     display: none;
   }
@@ -143,9 +139,6 @@
 /* LAPTOP DESKTOP */
 
 @media (min-width: 37.5rem) and (max-width: 80.0625rem) {
-  .mobile_btn {
-    display: none;
-  }
   .nameContainer {
     display: none;
   }
@@ -173,6 +166,7 @@
     width: 100%;
     top: 0;
     height: auto;
+    z-index: unset;
   }
 
   .filterWrapper {
