--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 body {
   background-color: var(--background-color);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 html {
